# arangodb-pythongraph

./: .gitignore  LICENSE  README.md  pyproject.toml
arangodb_pythongraph/: __init__.py  aql_pythongraph.py
tests/: helper.py  test_arangodb_pythongraph.py
tests/resources/: fetch_graph_query.aql  insert_characters.aql  insert_relations.aql
